<resources>
    <string name="app_name">Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tp">Trip Name</string>
    <string name="dest">Destination</string>
    <string name="TT">Trip type</string>
    <string name="Pret">Pret</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="rating">Rating</string>
</resources>
